1. Added a model for gait table recording; 2. InitialConfiguration and Commands for demo recording

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
 *.zip
 pr2/
+beer/
+cabinet/
+door_handle/
+double_pendulum_with_base/
+drc_practice_2x4/
+drc_practice_2x6/
+drc_practice_base_4x8/
+drc_practice_ladder/
+drc_practice_orange_jersey_barrier/
+drc_practice_truss/
+drc_practice_valve_wall/
+drc_practice_yellow_parking_block/
+dumpster/
+fast_food/
+fire_hose_long/
+fire_hydrant/
+gas_station/
+grey_wall/
+hammer/
+hinged_door/
+iss/
+mud_box/
+simple_arm/
+starting_pen/
+stop_sign/
+utility_cart/
+willowgarage/
+
