Added files fore motion competition

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ starting_pen/
 stop_sign/
 utility_cart/
 willowgarage/
-coke_can/
 Prototype1/
 Prototype2/
 SMORES1/
@@ -42,4 +41,15 @@ test1/
 test2/
 test3/
 test4/
-
+SMORES8Jack/xiao_a.gait
+Tarik_test.conf
+brick_box_3x1x3/
+cinder_block/
+construction_barrel/
+create/
+drc_practice_wood_slats/
+kinect/
+mailbox/
+pioneer2dx/
+table_marble/
+turtlebot/
